--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Farming Simulator</title>
     <link rel="stylesheet" href="style.css">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9884249376089321"
+         crossorigin="anonymous"></script>
 </head>
 <body>
     <div id="game-container">
@@ -37,11 +39,15 @@
                 <div id="inventory" class="inventory-list"></div>
 
                 <div class="ad-space left-ad">
-                    <div class="ad-placeholder">
-                        <div style="font-size: 11px; color: #95a5a6;">Advertisement</div>
-                        <div style="font-size: 32px; margin: 10px 0;">📢</div>
-                        <div style="font-size: 10px; color: #7f8c8d;">Your ad here</div>
-                    </div>
+                    <ins class="adsbygoogle"
+                         style="display:block"
+                         data-ad-client="ca-pub-9884249376089321"
+                         data-ad-slot="1234567890"
+                         data-ad-format="vertical"
+                         data-full-width-responsive="true"></ins>
+                    <script>
+                         (adsbygoogle = window.adsbygoogle || []).push({});
+                    </script>
                 </div>
             </div>
 
@@ -74,11 +80,15 @@
                 </div>
 
                 <div class="ad-space right-ad">
-                    <div class="ad-placeholder">
-                        <div style="font-size: 11px; color: #95a5a6;">Advertisement</div>
-                        <div style="font-size: 32px; margin: 10px 0;">🎯</div>
-                        <div style="font-size: 10px; color: #7f8c8d;">Your ad here</div>
-                    </div>
+                    <ins class="adsbygoogle"
+                         style="display:block"
+                         data-ad-client="ca-pub-9884249376089321"
+                         data-ad-slot="9876543210"
+                         data-ad-format="vertical"
+                         data-full-width-responsive="true"></ins>
+                    <script>
+                         (adsbygoogle = window.adsbygoogle || []).push({});
+                    </script>
                 </div>
             </div>
         </div>
@@ -86,13 +96,15 @@
 
     <!-- Bottom Center Ad -->
     <div class="ad-space bottom-ad">
-        <div class="ad-placeholder" style="display: flex; align-items: center; gap: 15px;">
-            <div style="font-size: 28px;">📺</div>
-            <div>
-                <div style="font-size: 11px; color: #95a5a6; margin-bottom: 4px;">Featured Advertisement</div>
-                <div style="font-size: 13px; color: #ecf0f1;">Your amazing product here - Click for more info!</div>
-            </div>
-        </div>
+        <ins class="adsbygoogle"
+             style="display:block"
+             data-ad-client="ca-pub-9884249376089321"
+             data-ad-slot="5555666677"
+             data-ad-format="horizontal"
+             data-full-width-responsive="true"></ins>
+        <script>
+             (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
     </div>
 
     <!-- Welcome Tutorial Modal -->
