fix: update landing page link to farming.html

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                     <span class="game-status status-live">✓ Live Now</span>
                     <h3>Farming Simulator</h3>
                     <p>Build and manage your own virtual farm. Plant crops, upgrade tools, hatch pets with a gacha system, and earn gold. Features a dynamic pet system with rare rarities and seasonal gameplay.</p>
-                    <a href="index.html" class="btn">Play Game</a>
+                    <a href="farming.html" class="btn">Play Game</a>
                 </div>
             </div>
 
