feat: add Blackjack game and link from landing page

--- a/index.html
+++ b/index.html
@@ -266,7 +266,18 @@
                 </div>
             </div>
 
-            <!-- Game 2: Placeholder (Coming Soon) -->
+            <!-- Game 2: Blackjack (Live) -->
+            <div class="game-card">
+                <div class="game-card-image">🃏</div>
+                <div class="game-card-content">
+                    <span class="game-status status-live">✓ Live Now</span>
+                    <h3>Blackjack</h3>
+                    <p>Fast single-player Blackjack. Start with $500; if you run out of money your balance resets to $50. Place bets and play against the dealer.</p>
+                    <a href="blackjack.html" class="btn">Play Game</a>
+                </div>
+            </div>
+
+            <!-- Game 3: Placeholder (Coming Soon) -->
             <div class="game-card">
                 <div class="game-card-image">
                     ⚔️
@@ -282,7 +293,7 @@
                 </div>
             </div>
 
-            <!-- Game 3: Placeholder (Coming Soon) -->
+            <!-- Game 4: Placeholder (Coming Soon) -->
             <div class="game-card">
                 <div class="game-card-image">
                     🚀
