feat: add 5 complete games - Dungeon, Space Runner, Slots, Puzzle Masters, Arcade Hoops

--- a/index.html
+++ b/index.html
@@ -277,83 +277,58 @@
                 </div>
             </div>
 
-            <!-- Game 3: Placeholder (Coming Soon) -->
+            <!-- Game 3: Epic Quest Dungeon (Live) -->
             <div class="game-card">
-                <div class="game-card-image">
-                    ⚔️
-                    <div class="coming-soon-overlay">
-                        <span style="background: rgba(0,0,0,0.8); color: white; padding: 10px 20px; border-radius: 6px;">Coming Soon</span>
-                    </div>
-                </div>
+                <div class="game-card-image">⚔️</div>
                 <div class="game-card-content">
-                    <span class="game-status status-coming">⏰ Coming Soon</span>
+                    <span class="game-status status-live">✓ Live Now</span>
                     <h3>Epic Quest Dungeon</h3>
                     <p>Embark on an epic adventure through mystical dungeons. Fight monsters, collect loot, and unlock powerful abilities. Experience turn-based RPG combat at its finest.</p>
-                    <button class="btn btn-disabled" disabled>Coming Soon</button>
+                    <a href="dungeon.html" class="btn">Play Game</a>
                 </div>
             </div>
 
-            <!-- Game 4: Placeholder (Coming Soon) -->
+            <!-- Game 4: Space Runner (Live) -->
             <div class="game-card">
-                <div class="game-card-image">
-                    🚀
-                    <div class="coming-soon-overlay">
-                        <span style="background: rgba(0,0,0,0.8); color: white; padding: 10px 20px; border-radius: 6px;">Coming Soon</span>
-                    </div>
-                </div>
+                <div class="game-card-image">🚀</div>
                 <div class="game-card-content">
-                    <span class="game-status status-coming">⏰ Coming Soon</span>
+                    <span class="game-status status-live">✓ Live Now</span>
                     <h3>Space Runner</h3>
                     <p>Navigate through space, dodge asteroids, and collect power-ups. How far can you go? Features leaderboards and challenging gameplay that keeps you coming back.</p>
-                    <button class="btn btn-disabled" disabled>Coming Soon</button>
+                    <a href="spacerunner.html" class="btn">Play Game</a>
                 </div>
             </div>
 
-            <!-- Game 4: Placeholder (Coming Soon) -->
+            <!-- Game 5: Lucky Slots Casino (Live) -->
             <div class="game-card">
-                <div class="game-card-image">
-                    🎰
-                    <div class="coming-soon-overlay">
-                        <span style="background: rgba(0,0,0,0.8); color: white; padding: 10px 20px; border-radius: 6px;">Coming Soon</span>
-                    </div>
-                </div>
+                <div class="game-card-image">🎰</div>
                 <div class="game-card-content">
-                    <span class="game-status status-coming">⏰ Coming Soon</span>
+                    <span class="game-status status-live">✓ Live Now</span>
                     <h3>Lucky Slots Casino</h3>
                     <p>Spin the reels and try your luck! Collect coins, unlock special features, and climb the daily leaderboards. Fast-paced action with big win potential.</p>
-                    <button class="btn btn-disabled" disabled>Coming Soon</button>
+                    <a href="slots.html" class="btn">Play Game</a>
                 </div>
             </div>
 
-            <!-- Game 5: Placeholder (Coming Soon) -->
+            <!-- Game 6: Puzzle Masters (Live) -->
             <div class="game-card">
-                <div class="game-card-image">
-                    🧩
-                    <div class="coming-soon-overlay">
-                        <span style="background: rgba(0,0,0,0.8); color: white; padding: 10px 20px; border-radius: 6px;">Coming Soon</span>
-                    </div>
-                </div>
+                <div class="game-card-image">🧩</div>
                 <div class="game-card-content">
-                    <span class="game-status status-coming">⏰ Coming Soon</span>
+                    <span class="game-status status-live">✓ Live Now</span>
                     <h3>Puzzle Masters</h3>
                     <p>Solve mind-bending puzzles and challenges. Progressive difficulty keeps the game fresh and engaging. Perfect for players who love brain teasers and problem-solving.</p>
-                    <button class="btn btn-disabled" disabled>Coming Soon</button>
+                    <a href="puzzle.html" class="btn">Play Game</a>
                 </div>
             </div>
 
-            <!-- Game 6: Placeholder (Coming Soon) -->
+            <!-- Game 7: Arcade Hoops (Live) -->
             <div class="game-card">
-                <div class="game-card-image">
-                    🏀
-                    <div class="coming-soon-overlay">
-                        <span style="background: rgba(0,0,0,0.8); color: white; padding: 10px 20px; border-radius: 6px;">Coming Soon</span>
-                    </div>
-                </div>
+                <div class="game-card-image">🏀</div>
                 <div class="game-card-content">
-                    <span class="game-status status-coming">⏰ Coming Soon</span>
+                    <span class="game-status status-live">✓ Live Now</span>
                     <h3>Arcade Hoops</h3>
                     <p>Test your skill with fast-paced arcade basketball. Shoot hoops, beat high scores, and compete with friends. Features multiple difficulty levels and power-ups.</p>
-                    <button class="btn btn-disabled" disabled>Coming Soon</button>
+                    <a href="hoops.html" class="btn">Play Game</a>
                 </div>
             </div>
         </div>
