FIX: Fix script loading order - currency.js must load before other scripts. All 7 games now use universal currency system with scarce rewards

--- a/blackjack.html
+++ b/blackjack.html
@@ -109,6 +109,8 @@
     </footer>
   </div>
 
-  <script src="blackjack.js" defer></script>
+  <script src="js/currency.js"></script>
+  <script src="js/utils.js" defer></script>
+  <script src="js/blackjack.js" defer></script>
 </body>
 </html>
