--- a/dungeon.html
+++ b/dungeon.html
@@ -484,6 +484,7 @@
         </div>
     </div>
 
+    <script src="js/currency.js"></script>
     <script src="js/utils.js" defer></script>
     <script src="js/dungeon.js" defer></script>
 </body>
