--- a/farming.html
+++ b/farming.html
@@ -168,7 +168,8 @@
 
     <script src="crops.js"></script>
     <script src="pets.js"></script>
-    <script src="game.js"></script>
+    <script src="js/currency.js"></script>
+    <script src="game.js" defer></script>
     <script>
         // Hidden developer mode activation (Ctrl+Shift+D)
         document.addEventListener('keydown', (e) => {
