--- a/hoops.html
+++ b/hoops.html
@@ -374,6 +374,7 @@
         </div>
     </div>
 
+    <script src="js/currency.js"></script>
     <script src="js/utils.js" defer></script>
     <script src="js/hoops.js" defer></script>
 </body>
