--- a/slots.html
+++ b/slots.html
@@ -529,6 +529,7 @@
         </div>
     </div>
 
+    <script src="js/currency.js"></script>
     <script src="js/utils.js" defer></script>
     <script src="js/slots.js" defer></script>
 </body>
