--- a/puzzle.html
+++ b/puzzle.html
@@ -479,6 +479,7 @@
         </div>
     </div>
 
+    <script src="js/currency.js"></script>
     <script src="js/utils.js" defer></script>
     <script src="js/puzzle.js" defer></script>
 </body>
