--- a/spacerunner.html
+++ b/spacerunner.html
@@ -340,6 +340,7 @@
         </div>
     </div>
 
+    <script src="js/currency.js"></script>
     <script src="js/utils.js" defer></script>
     <script src="js/spacerunner.js" defer></script>
 </body>
