FIX: Fix hoops aim direction and blackjack duplicate ID issue - hoops now shoots toward mouse aim point, blackjack balance displays correctly

--- a/blackjack.html
+++ b/blackjack.html
@@ -89,7 +89,7 @@
       <aside class="panel-right">
         <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:8px">
           <div class="small-muted">Balance</div>
-          <div style="font-weight:800;font-size:1.1rem">$<span id="balance">0</span></div>
+          <div style="font-weight:800;font-size:1.1rem">$<span id="balance-sidebar">0</span></div>
         </div>
         <div style="display:flex;gap:8px;margin-bottom:10px">
           <button id="btn-reset" class="btn secondary">Reset Balance</button>
